[package]
name = "chip8"
version = "0.1.0"
authors = ["Brandon Nguyen <gnuyent@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinyvec = { version = "1.1", features = ["alloc", "rustc_1_40"] }
tokio = { version = "1", features = ["full"] }
